fix: update return model
