# api/docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /api
 definitions:
+  cmd_restful_block_api_v1_blocks.blockResponse:
+    properties:
+      block:
+        $ref: '#/definitions/model.BlockRecord'
+    type: object
   cmd_restful_block_api_v1_blocks.listResponse:
     properties:
       list:
@@ -16,6 +21,11 @@ definitions:
       data: {}
       msg:
         type: string
+    type: object
+  github_com_blackhorseya_ethscan_cmd_restful_block_api_v1_blocks.blockResponse:
+    properties:
+      block:
+        $ref: '#/definitions/model.BlockRecord'
     type: object
   github_com_blackhorseya_ethscan_cmd_restful_block_api_v1_blocks.listResponse:
     properties:
@@ -164,7 +174,7 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.BlockRecord'
+                  $ref: '#/definitions/cmd_restful_block_api_v1_blocks.blockResponse'
               type: object
         "500":
           description: Internal Server Error
