# cmd/restful/block/api/v1/blocks/get_by_hash.go
@@ -1,13 +1,38 @@
 package blocks
 
 import (
+	"encoding/json"
 	"net/http"
 
 	"github.com/blackhorseya/ethscan/internal/pkg/errorx"
 	"github.com/blackhorseya/ethscan/pkg/contextx"
+	"github.com/blackhorseya/ethscan/pkg/entity/domain/block/model"
 	"github.com/blackhorseya/ethscan/pkg/response"
 	"github.com/gin-gonic/gin"
 )
+
+type blockResponse struct {
+	Block *model.BlockRecord
+}
+
+func (x *blockResponse) MarshalJSON() ([]byte, error) {
+	type Alias model.BlockRecord
+
+	var txns []string
+	for _, tx := range x.Block.Transactions {
+		txns = append(txns, tx.Hash)
+	}
+
+	return json.Marshal(&struct {
+		*Alias
+		BlockTime    int64    `json:"block_time"`
+		Transactions []string `json:"transactions,omitempty"`
+	}{
+		Alias:        (*Alias)(x.Block),
+		BlockTime:    x.Block.Timestamp.AsTime().UTC().Unix(),
+		Transactions: txns,
+	})
+}
 
 type getByHashRequest struct {
 	Hash string `uri:"hash" binding:"required"`
@@ -20,7 +45,7 @@ type getByHashRequest struct {
 // @Accept json
 // @Produce json
 // @Param hash path string true "hash"
-// @Success 200 {object} response.Response{data=model.BlockRecord}
+// @Success 200 {object} response.Response{data=blockResponse}
 // @Success 500 {object} er.Error
 // @Router /v1/blocks/{hash} [get]
 func (i *impl) GetByHash(c *gin.Context) {
@@ -37,11 +62,11 @@ func (i *impl) GetByHash(c *gin.Context) {
 		return
 	}
 
-	ret, err := i.biz.GetByHash(ctx, req.Hash)
+	block, err := i.biz.GetByHash(ctx, req.Hash)
 	if err != nil {
 		_ = c.Error(err)
 		return
 	}
 
-	c.JSON(http.StatusOK, response.OK.WithData(ret))
+	c.JSON(http.StatusOK, response.OK.WithData(&blockResponse{Block: block}))
 }
